-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12, 13
-
Component/s: hotspot
-
b28
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8217278 | 13 | Thomas Schatzl | P3 | Resolved | Fixed | b05 |
| JDK-8217548 | 12.0.1 | Thomas Schatzl | P3 | Resolved | Fixed | b04 |
The if periodic GC is disabled but periodic gc logging enabled, there are regular debug level log messages (e.g. with gc*=debug) that look like the following:
[0.204s][debug][gc,periodic] Last GC occurred 9462349824ms before which is below threshold 0ms. Skipping
The log message frequency is pretty high (every 300ms by default) that contains a random time span since the last_gc_time variable has not been initialized properly in this case.
Do not print these log messages if periodic gcs are disabled, and add a single log message at startup indicating whether periodic gcs are disabled/enabled at all.
[0.204s][debug][gc,periodic] Last GC occurred 9462349824ms before which is below threshold 0ms. Skipping
The log message frequency is pretty high (every 300ms by default) that contains a random time span since the last_gc_time variable has not been initialized properly in this case.
Do not print these log messages if periodic gcs are disabled, and add a single log message at startup indicating whether periodic gcs are disabled/enabled at all.
- backported by
-
JDK-8217278 Spammy periodic GC log message contains random time stamp with periodic gc disabled
-
- Resolved
-
-
JDK-8217548 Spammy periodic GC log message contains random time stamp with periodic gc disabled
-
- Resolved
-