8216490: Spammy periodic GC log message contains random time stamp with periodic gc disabled

Print periodic gc status at startup and only print regular messages if enabled.

Reviewed-by: sangheki, kbarrett